--- a/frontchat/public/index.html
+++ b/frontchat/public/index.html
@@ -9,8 +9,7 @@
       name="description"
       content="In Built Peanut 1.0"
     />
-    <meta name="google-site-verification" content="google33abfdc4aa6e54d6.html" />
-
+    <meta name="google-site-verification" content="IuIOL3IlNWfyFKxxpYGCNK7tvMt6lKhR-0dBwfWh3Ok" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--
